[build-system]
requires = [
  'setuptools==75.5.0',
  'Cython==3.0.11',
  'wheel==0.44.0',
]

build-backend = "setuptools.build_meta"

[metadata]
name = "navconfig"
description = "Universal Configuration Management for Python Projects."
author = "Jesus Lara Gimenez"
author_email = "jesuslarag@gmail.com"
url = "https://github.com/phenobarbital/navconfig"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
]
long_description = "file:README.md"
long_description_content_type = "text/markdown"
keywords = ["aiohttp", "settings", "configuration", "conf", "configuration-management"]
python_requires = ">=3.9.13"


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]

[navconfig]
keywords = ["aiohttp", "settings", "configuration", "conf", "configuration-management"]
